@@ -1,48 +1,76 @@
 class ReservasController < ApplicationController
   layout 'layout'
-  before_filter :authorize
+#  before_filter :authorize
 
   # GET /reservas
   # GET /reservas.xml
   def index
+	unless session[:admin]
+		redirect_to :controller => "cliente", :action => "login"
+	else
+
     @reservas = Reserva.find(:all, :order => "dataEntrada, dataSaida, tiposApartamento_id, hospede_id")
 
     respond_to do |format|
       format.html # index.html.erb
       format.xml  { render :xml => @reservas }
     end
+	end
   end
 
   # GET /reservas/1
   # GET /reservas/1.xml
   def show
-    @reserva = Reserva.find(params[:id])
+	unless session[:admin] || session[:cliente]
+		redirect_to :controller => "cliente", :action => "login"
+	else
+	    @reserva = Reserva.find(params[:id])
 
-    respond_to do |format|
-      format.html # show.html.erb
-      format.xml  { render :xml => @reserva }
-    end
+	    respond_to do |format|
+	      format.html # show.html.erb
+	      format.xml  { render :xml => @reserva }
+	    end
+	end
   end
 
   # GET /reservas/new
   # GET /reservas/new.xml
   def new
-    @reserva = Reserva.new
-
-    respond_to do |format|
-      format.html # new.html.erb
-      format.xml  { render :xml => @reserva }
-    end
+	unless session[:admin] || session[:cliente]
+		redirect_to :controller => "cliente", :action => "login"
+	else
+      		@reserva = Reserva.new
+      		respond_to do |format|
+      			format.html # new.html.erb
+      			format.xml  { render :xml => @reserva }
+    		end
+	end
   end
 
   # GET /reservas/1/edit
   def edit
-    @reserva = Reserva.find(params[:id])
+	unless session[:admin] || session[:cliente]
+		redirect_to :controller => "cliente", :action => "login"
+	else
+		@reserva = Reserva.find(params[:id])
+		if session[:cliente]
+			if @reserva.hospede_id != session[:id]
+				flash[:notice] = "Nao pode acessar esta reserva"
+				redirect_to :controller => "cliente", :action => "index"
+			end
+		else
+
+		end
+	end
   end
 
   # POST /reservas
   # POST /reservas.xml
   def create
+	unless session[:admin] || session[:cliente]
+		redirect_to :controller => "cliente", :action => "login"
+	else
+
     @reserva = Reserva.new(params[:reserva])
 
     respond_to do |format|
@@ -55,13 +83,17 @@ class ReservasController < ApplicationController
         format.xml  { render :xml => @reserva.errors, :status => :unprocessable_entity }
       end
     end
+	end
   end
 
   # PUT /reservas/1
   # PUT /reservas/1.xml
   def update
-    @reserva = Reserva.find(params[:id])
+	unless session[:admin] || session[:cliente]
+		redirect_to :controller => "cliente", :action => "login"
+	else
 
+    @reserva = Reserva.find(params[:id])
     respond_to do |format|
       if @reserva.update_attributes(params[:reserva])
         flash[:notice] = 'Reserva was successfully updated.'
@@ -72,17 +104,22 @@ class ReservasController < ApplicationController
         format.xml  { render :xml => @reserva.errors, :status => :unprocessable_entity }
       end
     end
+	end
   end
 
   # DELETE /reservas/1
   # DELETE /reservas/1.xml
   def destroy
-    @reserva = Reserva.find(params[:id])
+	unless session[:admin] || session[:cliente]
+		redirect_to :controller => "cliente", :action => "login"
+	else
+
     @reserva.destroy
 
     respond_to do |format|
       format.html { redirect_to(reservas_url) }
       format.xml  { head :ok }
     end
+	end
   end
 end
