@@ -28,6 +28,18 @@
     <%= select("hospede","estCivil", Hospede.estadosCivis , {} , { :new => nil }) %>
   </p>
   <p>
+    <%= f.label :email, 'E-mail' %><br />
+    <%= f.text_field :email %>
+  </p>
+  <p>
+    <%= f.label :login, 'Login' %><br />
+    <%= f.text_field :login %>
+  </p>
+  <p>
+    <%= f.label :password, 'Senha' %><br />
+    <%= f.password_field :password %>
+  </p>
+  <p>
     <%= f.submit "Inserir" %>
   </p>
 <% end %>
