@@ -1,0 +1,9 @@
+<% content_for :menu do %>
+<% end %>
+
+<p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
+<p><%= link_to 'Reserva', :controller => "reservas", :action => "new"%></p> 
+
+
+<br>
+<p><%= link_to 'Logout', :controller => "cliente", :action => "logout" %></p>
