@@ -5,7 +5,9 @@
     <th>Nome</th>
     <th>Descrição</th>
     <th>Valor</th>
+<% if session[:admin] %>
     <th colspan="3">Opções</th>
+<% end %>
   </tr>
 
 <% par_impar = 0
@@ -15,13 +17,16 @@
     <td><%=h tipos_apartamento.nome %></td>
     <td><%=h tipos_apartamento.descricao %></td>
     <td><%=h tipos_apartamento.valor %></td>
+<% if session[:admin] %>
     <td width="5%"><%= link_to 'Exibir', tipos_apartamento %></td>
     <td width="5%"><%= link_to 'Editar', edit_tipos_apartamento_path(tipos_apartamento) %></td>
     <td width="5%"><%= link_to 'Remover', tipos_apartamento, :confirm => 'Você tem certeza?', :method => :delete %></td>
+<% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
-
+<% if session[:admin] %>
 <%= link_to 'Inserir novo tipo de apartamento', new_tipos_apartamento_path %>
+<% end %>
